--- a/config/x86_64/luci.config
+++ b/config/x86_64/luci.config
@@ -14,7 +14,6 @@ CONFIG_PACKAGE_luci-base=y
 #
 # Translations
 #
-CONFIG_LUCI_LANG_ja=y
 CONFIG_LUCI_LANG_zh_Hans=y
 CONFIG_LUCI_LANG_zh_Hant=y
 # end of Translations
@@ -30,6 +29,8 @@ CONFIG_PACKAGE_luci-mod-system=y
 # 3. Applications
 #
 CONFIG_PACKAGE_luci-app-adguardhome=y
+CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=y
+CONFIG_PACKAGE_luci-app-advanced=y
 CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-opkg=y
