--- a/config/x86_64/luci.config
+++ b/config/x86_64/luci.config
@@ -37,6 +37,7 @@ CONFIG_PACKAGE_luci-app-opkg=y
 CONFIG_PACKAGE_luci-app-ikoolproxy=y
 CONFIG_PACKAGE_luci-app-adblock=y
 #
+CONFIG_PACKAGE_ikoolproxy=y
 # Configuration
 #
 # end of Configuration
