--- a/config/x86_64/luci.config
+++ b/config/x86_64/luci.config
@@ -36,8 +36,25 @@ CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-opkg=y
 CONFIG_PACKAGE_luci-app-ikoolproxy=y
 CONFIG_PACKAGE_luci-app-adblock=y
+CONFIG_PACKAGE_simple-adblock=y
 #
+CONFIG_PACKAGE_adblock=y
+CONFIG_DEFAULT_luci-app-adbyby-plus=y
+CONFIG_PACKAGE_luci-app-adbyby-plus=y
+CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=y
+CONFIG_PACKAGE_adbyby=y
 CONFIG_PACKAGE_ikoolproxy=y
+
+#koolproxy支持
+CONFIG_PACKAGE_iptables-mod-nat-extra=y
+CONFIG_PACKAGE_kmod-ipt-extra=y
+CONFIG_PACKAGE_diffutils=y
+CONFIG_PACKAGE_openssl-util=y
+CONFIG_PACKAGE_dnsmasq-full=y
+CONFIG_PACKAGE_ca-bundle=y
+CONFIG_PACKAGE_ca-certificates=y
+CONFIG_PACKAGE_libustream-openssl=n
+CONFIG_PACKAGE_lua-openssl=y
 # Configuration
 #
 # end of Configuration
