--- a/config/x86_64/image.config
+++ b/config/x86_64/image.config
@@ -8,11 +8,22 @@
 # Root filesystem images
 #
 CONFIG_GRUB_TIMEOUT="0"
-CONFIG_ISO_IMAGES=y
 CONFIG_VMDK_IMAGES=y
+# CONFIG_ISO_IMAGES is not set
+# CONFIG_VDI_IMAGES is not set
+# CONFIG_VHDX_IMAGES is not set
 #
 # Image Options
 #
+# CONFIG_TARGET_ROOTFS_EXT4FS is not set
+# CONFIG_TARGET_EXT4_RESERVED_PCT is not set
+# CONFIG_TARGET_EXT4_BLOCKSIZE_4K is not set
+# CONFIG_TARGET_EXT4_BLOCKSIZE_2K is not set
+# CONFIG_TARGET_EXT4_BLOCKSIZE_1K is not set
+# CONFIG_TARGET_EXT4_BLOCKSIZE is not set
+# CONFIG_TARGET_EXT4_JOURNAL is not set
+CONFIG_TARGET_ROOTFS_SQUASHFS=y
+
 CONFIG_TARGET_KERNEL_PARTSIZE=256
-CONFIG_TARGET_ROOTFS_PARTSIZE=4096
+CONFIG_TARGET_ROOTFS_PARTSIZE=5120
 # end of Target Images
