--- a/config/x86_64/all.config
+++ b/config/x86_64/all.config
@@ -117,11 +117,12 @@ CONFIG_PACKAGE_kmod-lib-zstd=y
 CONFIG_PACKAGE_kmod-oid-registry=y
 # end of Libraries
 #
-# Native Language Support
+# 语言支持
 #
 CONFIG_PACKAGE_kmod-nls-cp932=y
 CONFIG_PACKAGE_kmod-nls-cp936=y
 CONFIG_PACKAGE_kmod-nls-cp950=y
+CONFIG_PACKAGE_kmod-nls-utf8=y
 # end of Native Language Support
 #
 # Netfilter Extensions
@@ -391,40 +392,28 @@ CONFIG_PACKAGE_luci-lib-nixio=y
 CONFIG_PACKAGE_luci-i18n-adguardhome-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-argon-config-zh-tw=y
-CONFIG_PACKAGE_luci-i18n-base-ja=y
 CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-base-zh-tw=y
 CONFIG_PACKAGE_luci-i18n-cifs-mount-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-ddns-ja=y
 CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ddns-zh-tw=y
-CONFIG_PACKAGE_luci-i18n-firewall-ja=y
 CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-firewall-zh-tw=y
-CONFIG_PACKAGE_luci-i18n-netspeedtest-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-nlbwmon-ja=y
-CONFIG_PACKAGE_luci-i18n-nlbwmon-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-nlbwmon-zh-tw=y
-CONFIG_PACKAGE_luci-i18n-opkg-ja=y
 CONFIG_PACKAGE_luci-i18n-opkg-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-opkg-zh-tw=y
 CONFIG_PACKAGE_luci-i18n-rclone-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-samba4-ja=y
 CONFIG_PACKAGE_luci-i18n-samba4-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-samba4-zh-tw=y
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-tw=y
 CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-ttyd-ja=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-tw=y
 CONFIG_PACKAGE_luci-i18n-turboacc-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-upnp-ja=y
 CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-upnp-zh-tw=y
 CONFIG_PACKAGE_luci-i18n-usb-printer-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-wol-ja=y
 CONFIG_PACKAGE_luci-i18n-wol-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-wol-zh-tw=y
 CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
@@ -446,25 +435,7 @@ CONFIG_PACKAGE_ariang=y
 #
 # File Transfer
 #
-CONFIG_PACKAGE_aria2=y
 #
-# Aria2 Configuration
-#
-CONFIG_ARIA2_OPENSSL=y
-CONFIG_ARIA2_LIBXML2=y
-CONFIG_ARIA2_BITTORRENT=y
-CONFIG_ARIA2_METALINK=y
-CONFIG_ARIA2_SFTP=y
-CONFIG_ARIA2_ASYNC_DNS=y
-CONFIG_ARIA2_COOKIE=y
-CONFIG_ARIA2_WEBSOCKET=y
-# end of Aria2 Configuration
-CONFIG_PACKAGE_curl=y
-CONFIG_PACKAGE_rclone=y
-CONFIG_PACKAGE_rclone-config=y
-CONFIG_PACKAGE_vsftpd-tls=y
-CONFIG_PACKAGE_wget-ssl=y
-# end of File Transfer
 #
 # Firewall
 #
@@ -574,7 +545,6 @@ CONFIG_MODEMMANAGER_WITH_QMI=y
 CONFIG_MODEMMANAGER_WITH_QRTR=y
 # end of Configuration
 CONFIG_PACKAGE_netperf=y
-CONFIG_PACKAGE_nlbwmon=y
 CONFIG_PACKAGE_proto-bonding=y
 CONFIG_PACKAGE_samba4-admin=y
 CONFIG_PACKAGE_samba4-client=y
