--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -105,68 +105,68 @@ jobs:
           git clone --depth=1 --single-branch https://github.com/1wrt/luci-app-ikoolproxy $DOWNLOAD_ROOT_PATH/patch/ikoolproxy
           git clone https://git.openwrt.org/openwrt/openwrt.git $DOWNLOAD_ROOT_PATH/openwrt
 
-      - name: 导入拓展软件包
-        run: |
-          TMPDIR=$(mktemp -d) || exit 1
-          EXT_PKGS_PREP_PATH=$TMPDIR/extpackages_prepare
-          EXT_PKGS_DL_PATH=$DOWNLOAD_ROOT_PATH/extpackages/dl
-          EXT_PKGS_PATH=$DOWNLOAD_ROOT_PATH/extpackages/extpackages
+      #- name: 导入拓展软件包
+      #  run: |
+      #    TMPDIR=$(mktemp -d) || exit 1
+      #    EXT_PKGS_PREP_PATH=$TMPDIR/extpackages_prepare
+      #    EXT_PKGS_DL_PATH=$DOWNLOAD_ROOT_PATH/extpackages/dl
+      #    EXT_PKGS_PATH=$DOWNLOAD_ROOT_PATH/extpackages/extpackages
           #EXT_PKGS_CONFIG=$GITHUB_WORKSPACE/config/${{ matrix.config }}/OpenWrt-K/extpackages.config
-          mkdir -p $EXT_PKGS_PREP_PATH $EXT_PKGS_PATH $EXT_PKGS_DL_PATH
-          NUMBER_OF_PKGS=$(grep -c "^EXT_PACKAGES_NAME\[" $EXT_PKGS_CONFIG)
-          n=1
-          while [ "$n" -le $NUMBER_OF_PKGS ]; do
-              EXT_PKG_REPOSITORIE=$(grep "^EXT_PACKAGES_REPOSITORIE\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
-              EXT_PKG_BRANCH=$(grep "^EXT_PACKAGES_BRANCH\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
-              echo "REPOSITORIE=$EXT_PKG_REPOSITORIE BRANCH=$EXT_PKG_BRANCH" >> $EXT_PKGS_PREP_PATH/extpackagesbr.config
-              n=$(( n+1 ))
-          done
-          sort $EXT_PKGS_PREP_PATH/extpackagesbr.config|uniq > $EXT_PKGS_PREP_PATH/clone.config
-          sed -i -e "s/BRANCH=$//g" $EXT_PKGS_PREP_PATH/clone.config
-          sed -i -e "s/BRANCH=/--branch /g" $EXT_PKGS_PREP_PATH/clone.config
-          NUMBER_OF_CLONES=$(grep -c "REPOSITORIE=" $EXT_PKGS_PREP_PATH/clone.config)
-          sed -i "s/^REPOSITORIE=//g" $EXT_PKGS_PREP_PATH/clone.config
-          echo "开始克隆拓展软件包仓库"
-          n=1
-          while [ "$n" -le $NUMBER_OF_CLONES ]; do
-              mkdir -p $EXT_PKGS_DL_PATH/TMP
-              COLNE_ARGUMENT=$(sed -n "${n}p" $EXT_PKGS_PREP_PATH/clone.config)
-              echo "正在克隆拓展软件包仓库：$(echo "$COLNE_ARGUMENT" | sed -e "s/ --branch.*//g" -e "s@.*://@@g" -e "s/^[a-zA-Z.]\{1,111\}\///" -e "s/\/$//g")"
-              git clone --depth=1 --single-branch $COLNE_ARGUMENT $EXT_PKGS_DL_PATH/TMP
-              cd $EXT_PKGS_DL_PATH/TMP
-              if [ "$(echo "$COLNE_ARGUMENT" | grep -c " --branch ")" -ne '0' ];then
-                  BRANCH=$(git rev-parse --abbrev-ref HEAD)
-              else
-                  BRANCH="default_branch"
-              fi
-              REPO_PATH="$BRANCH""/""$(echo "$COLNE_ARGUMENT" | sed -e "s/ --branch.*//g" -e "s@.*://@@g" -e "s/^[a-zA-Z.]\{1,111\}\///" -e "s/\/$//g")"
-              mkdir -p $EXT_PKGS_DL_PATH/$REPO_PATH
-              cp -RT $EXT_PKGS_DL_PATH/TMP/ $EXT_PKGS_DL_PATH/$REPO_PATH
-              rm -rf $EXT_PKGS_DL_PATH/TMP/
-              cd $GITHUB_WORKSPACE
-              n=$(( n+1 ))
-          done
-          echo "开始整理拓展软件包"
-          n=1
-          while [ "$n" -le $NUMBER_OF_PKGS ]; do
-              NUMBER_OF_PKGS=$(grep -c "^EXT_PACKAGES_NAME\[" $EXT_PKGS_CONFIG)
-              EXT_PKG_NAME=$(grep "^EXT_PACKAGES_NAME\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
-              EXT_PKG_PATH=$(grep "^EXT_PACKAGES_PATH\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
-              EXT_PKG_REPOSITORIE=$(grep "^EXT_PACKAGES_REPOSITORIE\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
-              EXT_PKG_BRANCH=$(grep "^EXT_PACKAGES_BRANCH\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
-              EXT_PKG_REPO_PATH=$(echo "$EXT_PKG_REPOSITORIE" | sed -e 's/[[:space:]]*$//' -e "s/\.git$//g" -e "s/ .*//g" -e "s@.*://@@g" -e "s/^[a-zA-Z.]\{1,111\}\///" -e "s/\/$//g")
-              if [ -z "$EXT_PKG_BRANCH" ];then
-                  EXT_PKG_BRANCH="default_branch"
-              fi
-              mkdir -p $EXT_PKGS_PATH/$EXT_PKG_NAME
-              cp -RT $EXT_PKGS_DL_PATH/$EXT_PKG_BRANCH/$EXT_PKG_REPO_PATH/$EXT_PKG_PATH $EXT_PKGS_PATH/$EXT_PKG_NAME
-              n=$(( n+1 ))
-          done
-          cp -RT $EXT_PKGS_PATH $CMZJ_PACKAGE_ROOT_PATH
-          [[ -d $TMPDIR ]] && rm -rf "$TMPDIR"
-          cd $CMZJ_PACKAGE_ROOT_PATH
-          echo "CMZJ_PACKAGE_ROOT_PATH"
-          ls -la $(find $CMZJ_PACKAGE_ROOT_PATH -type d)
+      #    mkdir -p $EXT_PKGS_PREP_PATH $EXT_PKGS_PATH $EXT_PKGS_DL_PATH
+      #    NUMBER_OF_PKGS=$(grep -c "^EXT_PACKAGES_NAME\[" $EXT_PKGS_CONFIG)
+      #    n=1
+      #    while [ "$n" -le $NUMBER_OF_PKGS ]; do
+      #        EXT_PKG_REPOSITORIE=$(grep "^EXT_PACKAGES_REPOSITORIE\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
+      #        EXT_PKG_BRANCH=$(grep "^EXT_PACKAGES_BRANCH\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
+      #        echo "REPOSITORIE=$EXT_PKG_REPOSITORIE BRANCH=$EXT_PKG_BRANCH" >> $EXT_PKGS_PREP_PATH/extpackagesbr.config
+      #        n=$(( n+1 ))
+      #    done
+      #    sort $EXT_PKGS_PREP_PATH/extpackagesbr.config|uniq > $EXT_PKGS_PREP_PATH/clone.config
+      #    sed -i -e "s/BRANCH=$//g" $EXT_PKGS_PREP_PATH/clone.config
+      #    sed -i -e "s/BRANCH=/--branch /g" $EXT_PKGS_PREP_PATH/clone.config
+      #    NUMBER_OF_CLONES=$(grep -c "REPOSITORIE=" $EXT_PKGS_PREP_PATH/clone.config)
+      #    sed -i "s/^REPOSITORIE=//g" $EXT_PKGS_PREP_PATH/clone.config
+      #    echo "开始克隆拓展软件包仓库"
+      #    n=1
+      #    while [ "$n" -le $NUMBER_OF_CLONES ]; do
+      #        mkdir -p $EXT_PKGS_DL_PATH/TMP
+      #        COLNE_ARGUMENT=$(sed -n "${n}p" $EXT_PKGS_PREP_PATH/clone.config)
+      #        echo "正在克隆拓展软件包仓库：$(echo "$COLNE_ARGUMENT" | sed -e "s/ --branch.*//g" -e "s@.*://@@g" -e "s/^[a-zA-Z.]\{1,111\}\///" -e "s/\/$//g")"
+      #        git clone --depth=1 --single-branch $COLNE_ARGUMENT $EXT_PKGS_DL_PATH/TMP
+      #        cd $EXT_PKGS_DL_PATH/TMP
+      #        if [ "$(echo "$COLNE_ARGUMENT" | grep -c " --branch ")" -ne '0' ];then
+      #            BRANCH=$(git rev-parse --abbrev-ref HEAD)
+      #        else
+      #            BRANCH="default_branch"
+      #        fi
+      #        REPO_PATH="$BRANCH""/""$(echo "$COLNE_ARGUMENT" | sed -e "s/ --branch.*//g" -e "s@.*://@@g" -e "s/^[a-zA-Z.]\{1,111\}\///" -e "s/\/$//g")"
+      #        mkdir -p $EXT_PKGS_DL_PATH/$REPO_PATH
+      #        cp -RT $EXT_PKGS_DL_PATH/TMP/ $EXT_PKGS_DL_PATH/$REPO_PATH
+      #        rm -rf $EXT_PKGS_DL_PATH/TMP/
+      #        cd $GITHUB_WORKSPACE
+      #        n=$(( n+1 ))
+      #    done
+      #    echo "开始整理拓展软件包"
+      #    n=1
+      #    while [ "$n" -le $NUMBER_OF_PKGS ]; do
+      #        NUMBER_OF_PKGS=$(grep -c "^EXT_PACKAGES_NAME\[" $EXT_PKGS_CONFIG)
+      #        EXT_PKG_NAME=$(grep "^EXT_PACKAGES_NAME\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
+      #        EXT_PKG_PATH=$(grep "^EXT_PACKAGES_PATH\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
+      #        EXT_PKG_REPOSITORIE=$(grep "^EXT_PACKAGES_REPOSITORIE\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
+      #        EXT_PKG_BRANCH=$(grep "^EXT_PACKAGES_BRANCH\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
+      #        EXT_PKG_REPO_PATH=$(echo "$EXT_PKG_REPOSITORIE" | sed -e 's/[[:space:]]*$//' -e "s/\.git$//g" -e "s/ .*//g" -e "s@.*://@@g" -e "s/^[a-zA-Z.]\{1,111\}\///" -e "s/\/$//g")
+      #        if [ -z "$EXT_PKG_BRANCH" ];then
+      #            EXT_PKG_BRANCH="default_branch"
+      #        fi
+      #        mkdir -p $EXT_PKGS_PATH/$EXT_PKG_NAME
+      #        cp -RT $EXT_PKGS_DL_PATH/$EXT_PKG_BRANCH/$EXT_PKG_REPO_PATH/$EXT_PKG_PATH $EXT_PKGS_PATH/$EXT_PKG_NAME
+      #        n=$(( n+1 ))
+      #    done
+      #    cp -RT $EXT_PKGS_PATH $CMZJ_PACKAGE_ROOT_PATH
+      #    [[ -d $TMPDIR ]] && rm -rf "$TMPDIR"
+      #    cd $CMZJ_PACKAGE_ROOT_PATH
+      #    echo "CMZJ_PACKAGE_ROOT_PATH"
+      #    ls -la $(find $CMZJ_PACKAGE_ROOT_PATH -type d)
 
       - name: 修改Makefile文件
         working-directory:  ${{ env.CMZJ_PACKAGE_ROOT_PATH }}
