--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -61,13 +61,13 @@ jobs:
 
       - name: 建立工作文件夹
         run: |
-    #      mkdir -p download cmzj_package cmzj_patch
+#          mkdir -p download cmzj_package cmzj_patch
           mkdir -p download cmzj_patch
           export DOWNLOAD_ROOT_PATH="$(pwd)/download"
-    #      export CMZJ_PACKAGE_ROOT_PATH="$(pwd)/cmzj_package"
+#          export CMZJ_PACKAGE_ROOT_PATH="$(pwd)/cmzj_package"
           export CMZJ_PATCH_ROOT_PATH="$(pwd)/cmzj_patch"
           echo "DOWNLOAD_ROOT_PATH=$DOWNLOAD_ROOT_PATH" >> $GITHUB_ENV
-    #      echo "CMZJ_PACKAGE_ROOT_PATH=$CMZJ_PACKAGE_ROOT_PATH" >> $GITHUB_ENV
+#          echo "CMZJ_PACKAGE_ROOT_PATH=$CMZJ_PACKAGE_ROOT_PATH" >> $GITHUB_ENV
           echo "CMZJ_PATCH_ROOT_PATH=$CMZJ_PATCH_ROOT_PATH" >> $GITHUB_ENV
           mkdir -p $CMZJ_PATCH_ROOT_PATH/{firewall4,libnftnl,nftables}/patches/
           mkdir -p $CMZJ_PATCH_ROOT_PATH/{dnsmasq,libubox,netdata}
@@ -82,99 +82,99 @@ jobs:
           git clone --depth=1 --single-branch https://github.com/1wrt/luci-app-ikoolproxy $DOWNLOAD_ROOT_PATH/patch/ikoolproxy
           git clone https://git.openwrt.org/openwrt/openwrt.git $DOWNLOAD_ROOT_PATH/openwrt
 
-      #- name: 导入拓展软件包
-      #  run: |
-      #    TMPDIR=$(mktemp -d) || exit 1
-      #    EXT_PKGS_PREP_PATH=$TMPDIR/extpackages_prepare
-      #    EXT_PKGS_DL_PATH=$DOWNLOAD_ROOT_PATH/extpackages/dl
-      #    EXT_PKGS_PATH=$DOWNLOAD_ROOT_PATH/extpackages/extpackages
-          #EXT_PKGS_CONFIG=$GITHUB_WORKSPACE/config/${{ matrix.config }}/OpenWrt-K/extpackages.config
-      #    mkdir -p $EXT_PKGS_PREP_PATH $EXT_PKGS_PATH $EXT_PKGS_DL_PATH
-      #    NUMBER_OF_PKGS=$(grep -c "^EXT_PACKAGES_NAME\[" $EXT_PKGS_CONFIG)
-      #    n=1
-      #    while [ "$n" -le $NUMBER_OF_PKGS ]; do
-      #        EXT_PKG_REPOSITORIE=$(grep "^EXT_PACKAGES_REPOSITORIE\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
-      #        EXT_PKG_BRANCH=$(grep "^EXT_PACKAGES_BRANCH\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
-      #        echo "REPOSITORIE=$EXT_PKG_REPOSITORIE BRANCH=$EXT_PKG_BRANCH" >> $EXT_PKGS_PREP_PATH/extpackagesbr.config
-      #        n=$(( n+1 ))
-      #    done
-      #    sort $EXT_PKGS_PREP_PATH/extpackagesbr.config|uniq > $EXT_PKGS_PREP_PATH/clone.config
-      #    sed -i -e "s/BRANCH=$//g" $EXT_PKGS_PREP_PATH/clone.config
-      #    sed -i -e "s/BRANCH=/--branch /g" $EXT_PKGS_PREP_PATH/clone.config
-      #    NUMBER_OF_CLONES=$(grep -c "REPOSITORIE=" $EXT_PKGS_PREP_PATH/clone.config)
-      #    sed -i "s/^REPOSITORIE=//g" $EXT_PKGS_PREP_PATH/clone.config
-      #    echo "开始克隆拓展软件包仓库"
-      #    n=1
-      #    while [ "$n" -le $NUMBER_OF_CLONES ]; do
-      #        mkdir -p $EXT_PKGS_DL_PATH/TMP
-      #        COLNE_ARGUMENT=$(sed -n "${n}p" $EXT_PKGS_PREP_PATH/clone.config)
-      #        echo "正在克隆拓展软件包仓库：$(echo "$COLNE_ARGUMENT" | sed -e "s/ --branch.*//g" -e "s@.*://@@g" -e "s/^[a-zA-Z.]\{1,111\}\///" -e "s/\/$//g")"
-      #        git clone --depth=1 --single-branch $COLNE_ARGUMENT $EXT_PKGS_DL_PATH/TMP
-      #        cd $EXT_PKGS_DL_PATH/TMP
-      #        if [ "$(echo "$COLNE_ARGUMENT" | grep -c " --branch ")" -ne '0' ];then
-      #            BRANCH=$(git rev-parse --abbrev-ref HEAD)
-      #        else
-      #            BRANCH="default_branch"
-      #        fi
-      #        REPO_PATH="$BRANCH""/""$(echo "$COLNE_ARGUMENT" | sed -e "s/ --branch.*//g" -e "s@.*://@@g" -e "s/^[a-zA-Z.]\{1,111\}\///" -e "s/\/$//g")"
-      #        mkdir -p $EXT_PKGS_DL_PATH/$REPO_PATH
-      #        cp -RT $EXT_PKGS_DL_PATH/TMP/ $EXT_PKGS_DL_PATH/$REPO_PATH
-      #        rm -rf $EXT_PKGS_DL_PATH/TMP/
-      #        cd $GITHUB_WORKSPACE
-      #        n=$(( n+1 ))
-      #    done
-      #    echo "开始整理拓展软件包"
-      #    n=1
-      #    while [ "$n" -le $NUMBER_OF_PKGS ]; do
-      #        NUMBER_OF_PKGS=$(grep -c "^EXT_PACKAGES_NAME\[" $EXT_PKGS_CONFIG)
-      #        EXT_PKG_NAME=$(grep "^EXT_PACKAGES_NAME\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
-      #        EXT_PKG_PATH=$(grep "^EXT_PACKAGES_PATH\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
-      #        EXT_PKG_REPOSITORIE=$(grep "^EXT_PACKAGES_REPOSITORIE\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
-      #        EXT_PKG_BRANCH=$(grep "^EXT_PACKAGES_BRANCH\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
-      #        EXT_PKG_REPO_PATH=$(echo "$EXT_PKG_REPOSITORIE" | sed -e 's/[[:space:]]*$//' -e "s/\.git$//g" -e "s/ .*//g" -e "s@.*://@@g" -e "s/^[a-zA-Z.]\{1,111\}\///" -e "s/\/$//g")
-      #        if [ -z "$EXT_PKG_BRANCH" ];then
-      #            EXT_PKG_BRANCH="default_branch"
-      #        fi
-      #        mkdir -p $EXT_PKGS_PATH/$EXT_PKG_NAME
-      #        cp -RT $EXT_PKGS_DL_PATH/$EXT_PKG_BRANCH/$EXT_PKG_REPO_PATH/$EXT_PKG_PATH $EXT_PKGS_PATH/$EXT_PKG_NAME
-      #        n=$(( n+1 ))
-      #    done
-      #    cp -RT $EXT_PKGS_PATH $CMZJ_PACKAGE_ROOT_PATH
-      #    [[ -d $TMPDIR ]] && rm -rf "$TMPDIR"
-      #    cd $CMZJ_PACKAGE_ROOT_PATH
-      #    echo "CMZJ_PACKAGE_ROOT_PATH"
-      #    ls -la $(find $CMZJ_PACKAGE_ROOT_PATH -type d)
+#      - name: 导入拓展软件包
+#      #  run: |
+#      #    TMPDIR=$(mktemp -d) || exit 1
+#      #    EXT_PKGS_PREP_PATH=$TMPDIR/extpackages_prepare
+#      #    EXT_PKGS_DL_PATH=$DOWNLOAD_ROOT_PATH/extpackages/dl
+#      #    EXT_PKGS_PATH=$DOWNLOAD_ROOT_PATH/extpackages/extpackages
+#          #EXT_PKGS_CONFIG=$GITHUB_WORKSPACE/config/${{ matrix.config }}/OpenWrt-K/extpackages.config
+#      #    mkdir -p $EXT_PKGS_PREP_PATH $EXT_PKGS_PATH $EXT_PKGS_DL_PATH
+#      #    NUMBER_OF_PKGS=$(grep -c "^EXT_PACKAGES_NAME\[" $EXT_PKGS_CONFIG)
+#      #    n=1
+#      #    while [ "$n" -le $NUMBER_OF_PKGS ]; do
+#      #        EXT_PKG_REPOSITORIE=$(grep "^EXT_PACKAGES_REPOSITORIE\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
+#      #        EXT_PKG_BRANCH=$(grep "^EXT_PACKAGES_BRANCH\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
+#      #        echo "REPOSITORIE=$EXT_PKG_REPOSITORIE BRANCH=$EXT_PKG_BRANCH" >> $EXT_PKGS_PREP_PATH/extpackagesbr.config
+#      #        n=$(( n+1 ))
+#      #    done
+#      #    sort $EXT_PKGS_PREP_PATH/extpackagesbr.config|uniq > $EXT_PKGS_PREP_PATH/clone.config
+#      #    sed -i -e "s/BRANCH=$//g" $EXT_PKGS_PREP_PATH/clone.config
+#      #    sed -i -e "s/BRANCH=/--branch /g" $EXT_PKGS_PREP_PATH/clone.config
+#      #    NUMBER_OF_CLONES=$(grep -c "REPOSITORIE=" $EXT_PKGS_PREP_PATH/clone.config)
+#      #    sed -i "s/^REPOSITORIE=//g" $EXT_PKGS_PREP_PATH/clone.config
+#      #    echo "开始克隆拓展软件包仓库"
+#      #    n=1
+#      #    while [ "$n" -le $NUMBER_OF_CLONES ]; do
+#      #        mkdir -p $EXT_PKGS_DL_PATH/TMP
+#      #        COLNE_ARGUMENT=$(sed -n "${n}p" $EXT_PKGS_PREP_PATH/clone.config)
+#      #        echo "正在克隆拓展软件包仓库：$(echo "$COLNE_ARGUMENT" | sed -e "s/ --branch.*//g" -e "s@.*://@@g" -e "s/^[a-zA-Z.]\{1,111\}\///" -e "s/\/$//g")"
+#      #        git clone --depth=1 --single-branch $COLNE_ARGUMENT $EXT_PKGS_DL_PATH/TMP
+#      #        cd $EXT_PKGS_DL_PATH/TMP
+#      #        if [ "$(echo "$COLNE_ARGUMENT" | grep -c " --branch ")" -ne '0' ];then
+#      #            BRANCH=$(git rev-parse --abbrev-ref HEAD)
+#      #        else
+#      #            BRANCH="default_branch"
+#      #        fi
+#      #        REPO_PATH="$BRANCH""/""$(echo "$COLNE_ARGUMENT" | sed -e "s/ --branch.*//g" -e "s@.*://@@g" -e "s/^[a-zA-Z.]\{1,111\}\///" -e "s/\/$//g")"
+#      #        mkdir -p $EXT_PKGS_DL_PATH/$REPO_PATH
+#      #        cp -RT $EXT_PKGS_DL_PATH/TMP/ $EXT_PKGS_DL_PATH/$REPO_PATH
+#      #        rm -rf $EXT_PKGS_DL_PATH/TMP/
+#      #        cd $GITHUB_WORKSPACE
+#      #        n=$(( n+1 ))
+#      #    done
+#      #    echo "开始整理拓展软件包"
+#      #    n=1
+#      #    while [ "$n" -le $NUMBER_OF_PKGS ]; do
+#      #        NUMBER_OF_PKGS=$(grep -c "^EXT_PACKAGES_NAME\[" $EXT_PKGS_CONFIG)
+#      #        EXT_PKG_NAME=$(grep "^EXT_PACKAGES_NAME\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
+#      #        EXT_PKG_PATH=$(grep "^EXT_PACKAGES_PATH\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
+#      #        EXT_PKG_REPOSITORIE=$(grep "^EXT_PACKAGES_REPOSITORIE\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
+#      #        EXT_PKG_BRANCH=$(grep "^EXT_PACKAGES_BRANCH\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
+#      #        EXT_PKG_REPO_PATH=$(echo "$EXT_PKG_REPOSITORIE" | sed -e 's/[[:space:]]*$//' -e "s/\.git$//g" -e "s/ .*//g" -e "s@.*://@@g" -e "s/^[a-zA-Z.]\{1,111\}\///" -e "s/\/$//g")
+#      #        if [ -z "$EXT_PKG_BRANCH" ];then
+#      #            EXT_PKG_BRANCH="default_branch"
+#      #        fi
+#      #        mkdir -p $EXT_PKGS_PATH/$EXT_PKG_NAME
+#      #        cp -RT $EXT_PKGS_DL_PATH/$EXT_PKG_BRANCH/$EXT_PKG_REPO_PATH/$EXT_PKG_PATH $EXT_PKGS_PATH/$EXT_PKG_NAME
+#      #        n=$(( n+1 ))
+#      #    done
+#      #    cp -RT $EXT_PKGS_PATH $CMZJ_PACKAGE_ROOT_PATH
+#      #    [[ -d $TMPDIR ]] && rm -rf "$TMPDIR"
+#      #    cd $CMZJ_PACKAGE_ROOT_PATH
+#      #    echo "CMZJ_PACKAGE_ROOT_PATH"
+#      #    ls -la $(find $CMZJ_PACKAGE_ROOT_PATH -type d)
 
-     # - name: 修改Makefile文件
-     #   working-directory:  ${{ env.CMZJ_PACKAGE_ROOT_PATH }}
-     #   run: sed -i 's/include ..\/..\/luci.mk/include $(TOPDIR)\/feeds\/luci\/luci.mk/' $(find ./ -type f -name "Makefile")
+#     # - name: 修改Makefile文件
+#     #   working-directory:  ${{ env.CMZJ_PACKAGE_ROOT_PATH }}
+#     #   run: sed -i 's/include ..\/..\/luci.mk/include $(TOPDIR)\/feeds\/luci\/luci.mk/' $(find ./ -type f -name "Makefile")
 
-     # - name: 创建符号链接以修复中文支持
-     #   working-directory:  ${{ env.CMZJ_PACKAGE_ROOT_PATH }}
-     #   run: |
-     #     TMPDIR=$(mktemp -d) || exit 1
-     #     find . -name 'po' -type d > $TMPDIR/podir.list
-     #     total_rows=$(sed -n '$=' $TMPDIR/podir.list) #行数-文件夹个数
-     #     n=1
-      #    while [ "$n" -le $total_rows ]; do
-     #         DIR=$(sed -n "${n}p" $TMPDIR/podir.list)
-     #         if [ -h $DIR/zh_Hans ]; then
-     #             echo "$DIR/zh_Hans 符号链接以存在无需修复"
-     #         elif [ -d $DIR/zh_Hans ]; then
-     #             echo "$DIR/zh_Hans 目录已存在无需修复"
-     #         elif [ -e $DIR/zh_Hans ]; then
-     #             echo "$DIR/zh_Hans 存在非符号链接文件删除后重新创建"
-     #             rm -rf $DIR/zh_Hans||exit 1
-     #             ln -s zh-cn $DIR/zh_Hans||exit 1
-     #         elif [ ! -d $DIR/zh-cn ]; then
-     #             echo "$DIR/zh-cn 原汉化文件夹不存在，这可能是该luci插件原生为中文或不支持中文"
-     #         else
-     #             echo "$DIR/zh_Hans 符号链接不存在创建符号链接"
-     #             ln -s zh-cn $DIR/zh_Hans||exit 1
-     #         fi
-     #         n=$(( n+1 ))
-     #     done
-     #     [[ -d $TMPDIR ]] && rm -rf "$TMPDIR"
+#     # - name: 创建符号链接以修复中文支持
+#     #   working-directory:  ${{ env.CMZJ_PACKAGE_ROOT_PATH }}
+#     #   run: |
+#     #     TMPDIR=$(mktemp -d) || exit 1
+#     #     find . -name 'po' -type d > $TMPDIR/podir.list
+#     #     total_rows=$(sed -n '$=' $TMPDIR/podir.list) #行数-文件夹个数
+#     #     n=1
+#      #    while [ "$n" -le $total_rows ]; do
+#     #         DIR=$(sed -n "${n}p" $TMPDIR/podir.list)
+#     #         if [ -h $DIR/zh_Hans ]; then
+#     #             echo "$DIR/zh_Hans 符号链接以存在无需修复"
+#     #         elif [ -d $DIR/zh_Hans ]; then
+#     #             echo "$DIR/zh_Hans 目录已存在无需修复"
+#     #         elif [ -e $DIR/zh_Hans ]; then
+#     #             echo "$DIR/zh_Hans 存在非符号链接文件删除后重新创建"
+#     #             rm -rf $DIR/zh_Hans||exit 1
+#     #             ln -s zh-cn $DIR/zh_Hans||exit 1
+#     #         elif [ ! -d $DIR/zh-cn ]; then
+#     #             echo "$DIR/zh-cn 原汉化文件夹不存在，这可能是该luci插件原生为中文或不支持中文"
+#     #         else
+#     #             echo "$DIR/zh_Hans 符号链接不存在创建符号链接"
+#     #             ln -s zh-cn $DIR/zh_Hans||exit 1
+#     #         fi
+#     #         n=$(( n+1 ))
+#     #     done
+#     #     [[ -d $TMPDIR ]] && rm -rf "$TMPDIR"
 
       - name: 复制到cmzj_patch
         run: |
