--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -46,13 +46,13 @@ jobs:
 
       - name: 建立工作文件夹
         run: |
-           mkdir -p download cmzj_package cmzj_patch
+          mkdir -p download cmzj_package cmzj_patch
           mkdir -p download cmzj_patch
           export DOWNLOAD_ROOT_PATH="$(pwd)/download"
-           export CMZJ_PACKAGE_ROOT_PATH="$(pwd)/cmzj_package"
+          export CMZJ_PACKAGE_ROOT_PATH="$(pwd)/cmzj_package"
           export CMZJ_PATCH_ROOT_PATH="$(pwd)/cmzj_patch"
           echo "DOWNLOAD_ROOT_PATH=$DOWNLOAD_ROOT_PATH" >> $GITHUB_ENV
-           echo "CMZJ_PACKAGE_ROOT_PATH=$CMZJ_PACKAGE_ROOT_PATH" >> $GITHUB_ENV
+          echo "CMZJ_PACKAGE_ROOT_PATH=$CMZJ_PACKAGE_ROOT_PATH" >> $GITHUB_ENV
           echo "CMZJ_PATCH_ROOT_PATH=$CMZJ_PATCH_ROOT_PATH" >> $GITHUB_ENV
           mkdir -p $CMZJ_PATCH_ROOT_PATH/{firewall4,libnftnl,nftables}/patches/
           mkdir -p $CMZJ_PATCH_ROOT_PATH/{dnsmasq,libubox,netdata}
@@ -61,7 +61,7 @@ jobs:
       - name: 克隆补丁所需源代码
         run: |
           git clone --depth=1 --single-branch https://github.com/coolsnowwolf/lede $DOWNLOAD_ROOT_PATH/patch/lede
-           git clone --depth=1 --single-branch https://github.com/immortalwrt/packages $DOWNLOAD_ROOT_PATH/patch/immortalwrt-packages
+#          git clone --depth=1 --single-branch https://github.com/immortalwrt/packages $DOWNLOAD_ROOT_PATH/patch/immortalwrt-packages
           git clone --depth=1 --single-branch https://github.com/chenmozhijin/turboacc -b package $DOWNLOAD_ROOT_PATH/patch/turboacc
           git clone --depth=1 --single-branch https://github.com/kenzok8/openwrt-packages $DOWNLOAD_ROOT_PATH/patch/packages
           git clone --depth=1 --single-branch https://github.com/1wrt/luci-app-ikoolproxy $DOWNLOAD_ROOT_PATH/patch/ikoolproxy
