--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -1,7 +1,7 @@
 name: Build OpenWrt-K
 on:
   schedule:
-    - cron: '0 0 L * * *'
+    - cron: '0 0 23 L *'
 #  push:
 #    branches:
 #      - main
